Updated homepage query and multiple components

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,4 +1,5 @@
 .header {
+    font-size: 16px;
     background-color: #2A1A1F;
 }
 .headerContainer {
@@ -8,7 +9,10 @@
     padding: 0 1em;
     font-size: 16px;
 }
-.brand {
+.branding {
+    font-family: 'Passion One', cursive;
+    font-size: 26px;
+    margin: .25em 0;
     color: #FAFFD8;
 }
 .navbarContainer {
