--- a/src/components/article.module.css
+++ b/src/components/article.module.css
@@ -1,7 +1,7 @@
-.article {
-}
-
 .article h3 {
-    font-family: 'Passion One', cursive;
+    color: #BCA3AC;
+    font-family: 'Open Sans', sans-serif;
+}
+.date {
     color: #BCA3AC;
 }
