--- a/src/components/heroImg.module.css
+++ b/src/components/heroImg.module.css
@@ -8,6 +8,8 @@
     -o-background-size: cover;
     background-size: cover;
     text-align: center;
+    overflow: hidden;
+    position: relative;
 }
 .callToAction {
     margin-top: 200px;
@@ -32,4 +34,19 @@
 }
 .heroImg button:hover {
     cursor: pointer;
+}
+
+.heroImg > figure {
+  backface-visibility: hidden;
+  background-size: cover;
+  background-position: center center;
+  color: transparent;
+  height: 100%;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  opacity: 0;
+  width: 100%;
+  z-index: 0;
+  margin: 0;
 }
